Добавил базовые стили истили макросеток catalog

--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,7 @@
                 </div>
               </div>
             </fieldset>
-            <fieldset class="filter__buttons">
+            <fieldset class="filter__group filter__buttons">
               <button class="filter__button button button--second" type="submit">Применить</button>
               <button class="filter__button button button--trans" type="reset">Сбросить</button>
             </fieldset>
@@ -159,14 +159,14 @@
             <li class="products__item card">
               <a class="card__link" href="#">
                 <img class="card__img" src="images/catalog/hotel-1.jpg" width="300" height="212" alt="">
-                <h3 class="card__title">Amara Resort & Spa</h3>
+                <p class="card__title">Amara Resort & Spa</p>
               </a>
               <div class="card__description">
                 <span class="card__type">Гостиница</span>
                 <span class="card__price">От 4000 ₽</span>
               </div>
               <div class="card__buttons">
-                <a class="card__button button button--brown" href="#">Подробнее</a>
+                <a class="card__button button button--basic" href="#">Подробнее</a>
                 <button class="card__button button button--second" type="button">В избранное</button>
               </div>
               <div class="card__metrics">
@@ -177,7 +177,7 @@
             <li class="products__item card">
               <a class="card__link" href="#">
                 <img class="card__img" src="images/catalog/hotel-2.jpg" width="300" height="212" alt="">
-                <h3 class="card__title">Villas at Poco Diablo</h3>
+                <p class="card__title">Villas at Poco Diablo</p>
               </a>
               <div class="card__description">
                 <span class="card__type">Гостиница</span>
@@ -195,7 +195,7 @@
             <li class="products__item card">
               <a class="card__link" href="#">
                 <img class="card__img" src="images/catalog/hotel-3.jpg" width="300" height="212" alt="">
-                <h3 class="card__title">Desert Quail Inn</h3>
+                <p class="card__title">Desert Quail Inn</p>
               </a>
               <div class="card__description">
                 <span class="card__type">Гостиница</span>
@@ -213,7 +213,7 @@
             <li class="products__item card">
               <a class="card__link" href="#">
                 <img class="card__img" src="images/catalog/hotel-4.jpg" width="300" height="212" alt="">
-                <h3 class="card__title">GreenTree Inn</h3>
+                <p class="card__title">GreenTree Inn</p>
               </a>
               <div class="card__description">
                 <span class="card__type">Гостиница</span>
