Добавил стили input

--- a/catalog.html
+++ b/catalog.html
@@ -111,10 +111,10 @@
               <legend class="filter__title">Стоимость, ₽:</legend>
               <div class="range__inputs">
                 <label class="range__label">
-                  <input class="range__input" type="number" value="0" name="min-price">
+                  <input class="range__input input" type="number" value="0" name="min-price">
                 </label>
                 <label class="range__label">
-                  <input class="range__input" type="number" value="9000" name="max-price">
+                  <input class="range__input input" type="number" value="9000" name="max-price">
                 </label>
               </div>
               <div class="range__scale">
