Добавил/поправил стили. Добавил комментарии в файл стилей

--- a/catalog.html
+++ b/catalog.html
@@ -20,10 +20,10 @@
               <a class="site-nav__link" href="index.html">Главная</a>
             </li>
             <li class="site-nav__item">
-              <a class="site-nav__link site-nav__link--current" href="#">О седоне</a>
+              <a class="site-nav__link" href="#">О седоне</a>
             </li>
             <li class="site-nav__item">
-              <a class="site-nav__link" href="#">Гостиницы</a>
+              <a class="site-nav__link site-nav__link--current" href="#">Гостиницы</a>
             </li>
           </ul>
           <ul class="main-nav__list user-nav">
