Добавил стили формы в catalog Блоки чекбоксов, радио-кнопок, кнопок

--- a/catalog.html
+++ b/catalog.html
@@ -56,26 +56,23 @@
           </ol>
           <form class="catalog-header__form filter" action="https://echo.htmlacademy.ru/" method="get" id="filter-form">
             <fieldset class="filter__group">
-              <legend class="filter__title">Инфраструктура</legend>
+              <legend class="filter__title">Инфраструктура:</legend>
               <ul class="filter__list">
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input visually-hidden" type="checkbox" name="pool" checked>
-                    <span class="control__mark"></span>
                     <span class="control__label">Бассейн</span>
                   </label>
                 </li>
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input visually-hidden" type="checkbox" name="parking" checked>
-                    <span class="control__mark"></span>
                     <span class="control__label">Парковка</span>
                   </label>
                 </li>
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input visually-hidden" type="checkbox" name="wifi">
-                    <span class="control__mark"></span>
                     <span class="control__label">Wi-Fi</span>
                   </label>
                 </li>
@@ -87,21 +84,18 @@
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input visually-hidden" type="radio" name="hotel" checked>
-                    <span class="control__mark"></span>
                     <span class="control__label">Гостиница</span>
                   </label>
                 </li>
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input visually-hidden" type="radio" name="motel">
-                    <span class="control__mark"></span>
                     <span class="control__label">Мотель</span>
                   </label>
                 </li>
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input visually-hidden" type="radio" name="appart">
-                    <span class="control__mark"></span>
                     <span class="control__label">Апартаменты</span>
                   </label>
                 </li>
